k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dmarc
  labels:
    app.kubernetes.io/name: dmarc-dashboard
    app.kubernetes.io/part-of: dmarc
